인터랙션 및 마크다운 학습

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </h1>
 
         <nav class="navigation" aria-label="메인 메뉴">
+            <div class="menubar-container">
+                <button class="btn-menubar">메인 메뉴 보기</button>
+                <spam class="menubar menubar-top"></spam>
+                <spam class="menubar menubar-middle"></spam>
+                <spam class="menubar menubar-bottom"></spam>
+            </div>
             <ul class="main-menu">
                 <li><a href="#">소개</a></li>
                 <li><a href="#">갤러리</a></li>
@@ -35,7 +41,10 @@
         </form>
     </header>
     <main class="content">콘텐츠</main>
+
     <footer class="footer">푸터</footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="js/webcafe.js"></script>
 
 </body>
 
