--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
             </a>
         </h1>
 
-        <nav class="navigation" aria-label="메인 메뉴">
-            <div class="menubar-container">
-                <button class="btn-menubar">메인 메뉴 보기</button>
-                <spam class="menubar menubar-top"></spam>
-                <spam class="menubar menubar-middle"></spam>
-                <spam class="menubar menubar-bottom"></spam>
-            </div>
-            <ul class="main-menu">
-                <li><a href="#">소개</a></li>
-                <li><a href="#">갤러리</a></li>
-                <li><a href="#">게시판</a></li>
-                <li><a href="#">새소식</a></li>
-            </ul>
+        <nav class="navigation">
+            <!-- 구조상 존재해야 했다. aria-label 사용 -->
+            <h2 class="readable-hidden">
+                <div class=" menubar-container ">
+                    <button class="btn-menubar ">메인 메뉴 보기</button>
+                    <spam class="menubar menubar-top "></spam>
+                    <spam class="menubar menubar-middle "></spam>
+                    <spam class="menubar menubar-bottom "></spam>
+                </div>
+                <ul class="main-menu">
+                    <li><a href="# ">소개</a></li>
+                    <li><a href="# ">갤러리</a></li>
+                    <li><a href="# ">게시판</a></li>
+                    <li><a href="# ">새소식</a></li>
+                </ul>
         </nav>
-        <form action="javascript:alert('검색이 완료되었습니다.');" class="searh-form">
+        <form action="javascript:alert( '검색이 완료되었습니다.');" class="search-form">
             <fieldset>
                 <legend>검색 폼</legend>
                 <input type="search" aria-label="검색어" placeholder="검색어를 입력하세요." required>
@@ -40,11 +42,36 @@
             </fieldset>
         </form>
     </header>
-    <main class="content">콘텐츠</main>
+    <main class="content ">
+        <section class="book">
+            <h2 class="subject book-subject">
+                <a href="#">웹카페 서적<span class="en-subject">WebCafe Book</span></a>
+            </h2>
+            <div class="book-cover">
+                <img src="images/book_html5.jpg" alt="웹표준 핵심 가이드북 HTML5+CSS3" title="책에 대한 상세 설명은 하단 내용 참조">
+            </div>
+            <dl class="book-detail">
+                <dt class="readable-hidden">도서명</dt>
+                <dd class="book-heading">웹표준 핵심가이드북 HTML5+CSS3</dd>
+                <dt class="book-author">저자</dt>
+                <dd class="book-author-name">김데레사</dd>
+                <dt class="readable-hidden">평점</dt>
+                <dd class="book-grade" aria-label="5점 만점에 5점"></dd>
+            </dl>
+            <p class="book-summary">HTML5와 CSS3의 최신 스펙이 쉽고 체계적으로 정리되어 있으며 차세대 표준기술을 실전에 어떻게 적용할 수 있는지를 소개하고 있다. 특히 웹접근성 향상을 위해 오류 진단부터 수정까지의 프로세스를 실무 예제를 통해 익힐 수 있도록 하였다.</p>
+        </section>
+    </main>
 
-    <footer class="footer">푸터</footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="js/webcafe.js"></script>
+
+    <footer class="footer ">푸터</footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=" anonymous "></script>
+    <script src="js/webcafe.js "></script>
+
+
+
+
+
+
 
 </body>
 
